Test for final before changing static field modifiers